# gekocar

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: admin.py  auth.py  bookings.py  contacts.py
backend/app/core/: config.py
backend/app/services/: notification_service.py
frontend/: Dockerfile
